// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-wide"
    >
      Expense
    </div>
    <div
      className="show-for-wide"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
         No expenses 
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with the given expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-wide"
    >
      Expense
    </div>
    <div
      className="show-for-wide"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="one"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={1950000}
      createdAt={-345600000}
      description="Car downpayment"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={45000}
      createdAt={345600000}
      description="credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
